# VolumetricWeather

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
docs/: 날씨.pptx
include/: AtmosphereRMSEMeasurement.h  BarrierInfo.h  BasisScene.h  Camera.h  Drawable.hpp  FPSCamera.h  FakeVolumeGenerator.h  FrameContext.h  GLBLoader.h  Input.h  Logger.h  Mesh.h  PCH.h  PresetManager.h  Scene.h  Shader.h  VulkanBuffer.h  VulkanContext.h  VulkanImage.h  Window.h
include/core/: CircularQueue.hpp  Event.h  ImGUI.h  Util.h  Util.hpp  Window.h
include/pass/: APass.h  AtmospherePass.h  BlitPass.h  CompositePass.h  FakeVolumePass.h  HillairePass.h  IDrawablePass.h  LUTPass.h  OpaquePass.h  PostProcessPass.h  ShadowPass.h
include/render/: BarrierBuilder.h  Drawable.hpp  GPUTimer.h  Material.h  Mesh.h  Shader.h  VulkanBuffer.h  VulkanContext.h  VulkanImage.h
resource/: FakeVolume.vert  FakeVolume.vert.spv  aerialPerspectiveLUT.comp  aerialPerspectiveLUT.comp.spv  aerialShadow.comp  aerialShadow.comp.spv  atmosphere.comp  atmosphere.comp.spv  atmosphere2.comp  atmosphere2.comp.spv  atomosphere.comp  atomosphere.comp.spv  composite.frag  composite.frag.spv  composite.vert  composite.vert.spv  cone.glb  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  postprocess.frag  postprocess.frag.spv  postprocess.vert  shadow.vert  shadow.vert.spv  skyView.comp  skyView.comp.spv  transmittanceLUT.comp  transmittanceLUT.comp.spv  triangle.vert  triangle.vert.spv
src/: AtmosphereRMSEMeasurement.cpp  BarrierBuilder.cpp  BasisScene.cpp  Camera.cpp  FPSCamera.cpp  FakeVolumeGenerator.cpp  GLBLoader.cpp  GPUTimer.cpp  ImGUI.cpp  Input.cpp  Logger.cpp  Material.cpp  Mesh.cpp  PresetManager.cpp  Scene.cpp  Shader.cpp  VulkanBuffer.cpp  VulkanContext.cpp  VulkanImage.cpp  Window.cpp
src/core/: Event.cpp  ImGUI.cpp  Implemntation.cpp  Input.cpp  Logger.cpp  Util.cpp  Window.cpp
src/pass/: APass.cpp  AtmospherePass.cpp  BlitPass.cpp  CompositePass.cpp  FakeVolumePass.cpp  HillairePass.cpp  LUTPass.cpp  OpaquePass.cpp  PostProcessPass.cpp  ShadowPass.cpp
src/render/: BarrierBuilder.cpp  GPUTimer.cpp  Material.cpp  Mesh.cpp  Shader.cpp  VulkanBuffer.cpp  VulkanContext.cpp  VulkanImage.cpp
